--- a/games.html
+++ b/games.html
@@ -11,7 +11,7 @@
 
 <body>
 <h1>Spēles</h1>
-<p style="margin-left:10px;">Ja dzīve ir spēle<br> Tad mainīga gan.<br><br> Brīžiem &nbsp;&nbsp;&nbsp; rotaļīga <br>Reizēm nopietna un neatgriezeniska skan. </p>
+<p id ="quote">Ja dzīve ir spēle<br> Tad mainīga gan.<br><br> Brīžiem &nbsp;&nbsp;&nbsp; rotaļīga <br>Reizēm nopietna un neatgriezeniska skan. </p>
 
 <div class = "container">
     <img src="/Attels.jpg" alt="attēls">
